syntax = "proto3";
package gw2ms;
import "common.proto";
import "google/protobuf/empty.proto";
option cc_generic_services = true;

message ClientMessageRequest
{
  IpPort rpc_client = 1;
}

message ConnectRequest
{
  IpPort rpc_client = 1;
  uint32 gate_node_id = 2;
}

message ConnectedGameRequest
{
  IpPort rpc_client = 1;
}

message GSIdRequest
{
  uint64 guid = 1;
  uint64 connection_id = 2;
}

message LeaveGameRequest
{
  uint64 connection_id = 1;
}

message PlayerDisconnectRequest
{
  uint64 connection_id = 1;
}

message DisconnectRequest
{
  uint64 guid = 1;
  uint64 conn_id = 2;
}

service Gw2msService {
  rpc GwConnectMaster (ConnectRequest) returns (google.protobuf.Empty);
  rpc PlayerDisconnect (PlayerDisconnectRequest) returns (google.protobuf.Empty);
  rpc LeaveGame (LeaveGameRequest) returns (google.protobuf.Empty);
  rpc PlayerService (ClientMessageRequest) returns (google.protobuf.Empty);
  rpc Disconnect (DisconnectRequest) returns (google.protobuf.Empty); 
}
